# mcp-demos

./: .gitignore  README.md
projects/10-tailwind-tricks-from-shadcn/: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
projects/10-tailwind-tricks-from-shadcn/app/: root.tsx  routes.ts
projects/10-tailwind-tricks-from-shadcn/app/components/: example.tsx
projects/10-tailwind-tricks-from-shadcn/app/routes/: 01-dynamic-width-css-custom-properties.tsx  02-toggle-styles-data-attributes.tsx  03-nested-svg-parent-data-states.tsx  04-parent-child-style-inheritance.tsx  05-group-based-state-management.tsx  home.tsx  (+5 more)
projects/agentic-loop/: .gitignore  README.md  agent.py  clients.py  demo.zellij  pyproject.toml  simple_ui.py  tools.py
projects/effect-wrapper-for-tanstack-with-effect-httpapi/: index.tsx
projects/flatten-dir-for-ai/: README.md  flatten.py
projects/full-api-type-safety/: README.md
projects/full-api-type-safety/api/: .gitignore  pyproject.toml  server.py
projects/full-api-type-safety/app/: openapi.json  openapi.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
projects/introduction-to-mcp-with-sql-agent/: README.md  mcp_client.py
projects/mcp-sampling/: README.md  client.py  pyproject.toml  server.py
projects/mcp-sse/: README.md  client.py  pyproject.toml
projects/python-concurrency-guards/: README.md  layout.zellij  main.py  pyproject.toml
projects/upsert-with-on-conflict/: 1_manual-upsert.py  2_on_conflict_constraint_upsert.py  3_on_conflict_constraint_bulk_upserts.py  README.md  layout.zellij  pyproject.toml
(+4 files in other folders)
