[project]
name = "api"
version = "v1.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
]


[dependency-groups]
dev = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3", "testcontainers>=4.8.2"]


[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
# Assume Python 3.11
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["I", "D"] # Added "D" for docstring checks

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
plugins = ['pydantic.mypy']


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
